--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,9 @@
-:root {
+*{
+  background-color: white;
+  color: black;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -83,9 +88,9 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
+} 
 
-body {
+ body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -93,11 +98,18 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+    
+} */
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.page-container{
+  display: flex;
+  height: auto;
+  flex-direction: column;
 }
 
 @media (prefers-color-scheme: dark) {
